--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<div id="app"></div>
+<h1 class="shopping-cart">Shopping cart</h1>
+<div class="old-cost">Old cost:</div>
+<div class="new-cost">New cost:</div>
